amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-interface.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-interface.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/core#unresolved-reference
  Message: Unresolved reference 'HasName'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-interface.api.graphql#/shape/Person/unresolved
  Property: 
  Range: 
  Location: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-interface.api.graphql
